--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "material-table": "^1.39.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apexcharts": "^1.3.3",
     "react-canvas-js": "^1.0.1",
@@ -35,6 +36,11 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "cypress": "^3.4.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "sass": "^1.20.3"
   },
   "eslintConfig": {
