--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/pickers": "^3.1.1",
     "apexcharts": "^3.8.1",
     "axios": "^0.19.0",
+    "eslint-plugin-import": "^2.18.2",
     "live-server": "^1.2.1",
     "material-table": "^1.39.0",
     "moment": "^2.24.0",
@@ -37,7 +38,6 @@
     "@babel/preset-react": "^7.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "sass": "^1.20.3"
