--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@date-io/moment": "^1.3.6",
+    "@date-io/moment": "^2.16.1",
     "@material-ui/core": "^4.1.0",
-    "@material-ui/icons": "^4.1.0",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/pickers": "^3.1.1",
-    "apexcharts": "^3.8.1",
-    "axios": "^0.19.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "live-server": "^1.2.1",
-    "material-table": "^1.39.0",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-apexcharts": "^1.3.3",
+    "apexcharts": "^3.36.3",
+    "axios": "^1.2.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "live-server": "^1.2.2",
+    "material-table": "^2.0.3",
+    "moment": "^2.29.4",
+    "node-sass": "8.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-canvas-js": "^1.0.1",
-    "react-dom": "^16.8.6",
-    "react-draggable": "^3.3.0",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "eslint": "^5.16.0",
-    "sass": "^1.20.3"
+    "@babel/core": "^7.20.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/eslint-parser": "^7.5.4",
+    "eslint": "^8.29.0",
+    "sass": "^1.56.1"
   },
   "eslintConfig": {
     "extends": "react-app"
